--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,8 +26,11 @@ jobs:
         uses: actions/cache@v4
         with:
           path: target/debug/runner
-          key: ${{ runner.os }}-${{ hashFiles('**/*.{rs,toml,gel,edgeql}') }}
+          key: ${{ runner.os }}-${{ hashFiles('**/*.rs', '**/*.toml','**/*.gel', '**/*.edgeql') }}
 
+      - name: Install OpenSSL
+        if: steps.cache-build.outputs.cache-hit != 'true'
+        run: sudo apt-get update && sudo apt-get install -y libssl-dev pkg-config
       - name: Install Rust toolchain
         if: steps.cache-build.outputs.cache-hit != 'true'
         uses: dtolnay/rust-toolchain@stable
