--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,6 @@ anyhow = "1.0.98"
 log = "0.4.27"
 env_logger = "0.11.8"
 serde_repr = "0.1.20"
+tokio-postgres = "0.7.13"
+postgres-openssl = "0.5.1"
+openssl = "0.10.73"
